--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>RoadTrip</title>
   <link href="https://fonts.googleapis.com/css?family=Baloo+Paaji|Cabin+Sketch|Courgette|PT+Sans+Caption|Pathway+Gothic+One|Alegreya+Sans+SC:700|Josefin+Sans:700" rel="stylesheet">
-  <base href="/road-trip/">
+  <base href="/road-trip-planner/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="http://clipart-library.com/images/rinKGBg8T.png">
 
